[package]
name = "kyber_ntt_avx2"
version = "0.1.0"
edition = "2021"
authors = ["Aayan"]
description = "Super-fast 13.28ms Kyber Forward NTT core pipeline optimized with AVX2 and branchless Barrett reductions."

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
